--- a/spytest/testbeds/sonic_services.yaml
+++ b/spytest/testbeds/sonic_services.yaml
@@ -1,4 +1,3 @@
-hw_qual: !include sonic_hwqual.yaml
 
 tftp:
   ip: 192.168.1.1
@@ -37,6 +36,10 @@ snmptrap:
   password: broadcom
   path: /var/log/snmptrap.log
 
+ldapservers:
+  server1: 10.52.168.155
+  server2: 10.52.168.187
+
 tacacs:
   hosts: [{ip: 10.193.81.61, username: brcm, password: broadcom,
            timeout: 5, passkey: lvl7india, tcp_port: 49, auth_type: pap, priority: 3,
@@ -68,7 +71,6 @@ tacacs:
           {username: user4, password: pass4, role: admin},
           {username: user5, password: pass5, role: operator},
           {username: user6, password: pass6, role: admin}]
-
 radius:
   hosts: [{ip: 10.52.145.178, username: test, password: test,
            timeout: 5, passkey: lvl7india, udp_port: 1812, auth_type: pap, priority: 8,
@@ -301,3 +303,6 @@ voice_vlan:
   network_port: 'Ethernet9'
   voip_port1: 'Ethernet6'
   voip_port2: 'Ethernet8'
+
+mgmt_intf_gw_ip_addr:
+  ip1: 10.193.80.5
