--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -115,9 +115,9 @@ bgp/test_bgp_gr_helper.py:
 
 bgp/test_bgp_speaker.py:
   skip:
-    reason: "Not supported on topology backend."
+    reason: "Not supported on T2 topology or topology backend"
     conditions:
-      - "'backend' in topo_name"
+      - "'backend' in topo_name or 't2' in topo_name"
 
 #######################################
 #####            cacl             #####
