--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -959,9 +959,9 @@ show_techsupport/test_auto_techsupport.py:
       - (is_multi_asic==True)
 
 show_techsupport/test_auto_techsupport.py::TestAutoTechSupport::test_max_limit[core]:
-  skip:
+  xfail:
     reason: "This test case may fail due to a known issue https://github.com/sonic-net/sonic-buildimage/issues/15051."
-    conditions: 
+    conditions:
       - https://github.com/sonic-net/sonic-buildimage/issues/15051
 
 show_techsupport/test_auto_techsupport.py::TestAutoTechSupport::test_sai_sdk_dump:
