--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,4 +36,11 @@ tests/qos/files/dynamic_buffer_param.json @neethajohn @stephenxs
 tests/qos/files/mellanox @stephenxs @keboliu
 tests/qos/args @neethajohn @stephenxs
 tests/common/mellanox_data.py @keboliu @Junchao-Mellanox
-
+tests/dhcp_relay @kellyyeh
+tests/bgp @StormLiangMS
+tests/pfcwd @lipxu @neethajohn
+tests/lldp @ZhaohuiS
+tests/cacl @ZhaohuiS
+tests/dualtor @lolyu @wsycqyz
+tests/dualtor_io @lolyu @wsycqyz
+tests/dualtor_mgmt @lolyu @wsycqyz
