--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -26,3 +26,4 @@ markers:
 log_cli_format: %(asctime)s %(funcNamewithModule)-40.40s L%(lineno)-.4d %(levelname)-7s| %(message)s
 log_file_format: %(asctime)s %(funcNamewithModule)-40.40s L%(lineno)-.4d %(levelname)-7s| %(message)s
 log_file_date_format: %d/%m/%Y %H:%M:%S
+junit_family: xunit1
