--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -143,15 +143,15 @@ stages:
           KVM_IMAGE_BRANCH: "master"
           MGMT_BRANCH: "master"
 
-  - job: appliance_elastictest
-    displayName: "kvmtest-appliance by Elastictest"
+  - job: dpu_elastictest
+    displayName: "kvmtest-dpu by Elastictest"
     timeoutInMinutes: 240
     continueOnError: false
     pool: ubuntu-20.04
     steps:
       - template: .azure-pipelines/run-test-elastictest-template.yml
         parameters:
-          TOPOLOGY: appliance
+          TOPOLOGY: dpu
           MIN_WORKER: $(T0_SONIC_INSTANCE_NUM)
           MAX_WORKER: $(T0_SONIC_INSTANCE_NUM)
           COMMON_EXTRA_PARAMS: " --skip_dataplane_checking "
