--- a/.azure-pipelines/pr_test_scripts.yaml
+++ b/.azure-pipelines/pr_test_scripts.yaml
@@ -167,3 +167,6 @@ specific_param:
 #  all the test modules under macsec directory
   - name: macsec
     param: "--neighbor_type=sonic --enable_macsec --macsec_profile=128_SCI,256_XPN_SCI"
+  dpu:
+  - name: dash/test_dash_vnet.py
+    param: " --skip_dataplane_checking "
