--- a/tests/qos/files/qos_params.pac.yaml
+++ b/tests/qos/files/qos_params.pac.yaml
@@ -182,7 +182,7 @@ qos_params:
                 lossless_weight: 30
             100000_300m:
                 pkts_num_leak_out: 0
-                pkts_num_egr_mem: 6884
+                pkts_num_egr_mem: 5915
                 pg_drop:
                     dscp: 3
                     ecn: 1
@@ -192,6 +192,7 @@ qos_params:
                     pkts_num_trig_ingr_drp: 11396
                     pkts_num_margin: 300
                     iterations: 30
+                    cell_size: 384
                 xoff_1:
                     dscp: 3
                     ecn: 1
@@ -210,15 +211,15 @@ qos_params:
                     dscp: 3
                     ecn: 1
                     pg: 3
-                    pkts_num_trig_pfc: 2561
-                    pkts_num_dismiss_pfc: 2
+                    pkts_num_trig_pfc: 2562
+                    pkts_num_dismiss_pfc: 21
                     packet_size: 1350
                 xon_2:
                     dscp: 4
                     ecn: 1
                     pg: 4
-                    pkts_num_trig_pfc: 2561
-                    pkts_num_dismiss_pfc: 2
+                    pkts_num_trig_pfc: 2562
+                    pkts_num_dismiss_pfc: 21
                     packet_size: 1350
                 lossless_voq_1:
                     dscp: 3
