--- a/tests/qos/files/qos_params.gb.yaml
+++ b/tests/qos/files/qos_params.gb.yaml
@@ -62,6 +62,14 @@ qos_params:
                 lossless_weight: 30
             hdrm_pool_wm_multiplier: 1
             cell_size: 384
+            lossy_queue_voq_3:
+                dscp: 8
+                ecn: 1
+                pg: 0
+                pkts_num_trig_egr_drp: 16000
+                pkts_num_margin: 4
+                packet_size: 64
+                cell_size: 384
             100000_300m:
                 pkts_num_leak_out: 0
                 pg_drop:
