--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -786,9 +786,8 @@ pfcwd/test_pfcwd_warm_reboot.py:
    xfail:
      reason: "Warm Reboot is not supported in dualtor."
      conditions:
-        - "'dualtor' in topo_name"
+        - "('dualtor' in topo_name) or (hwsku in ['Arista-7050CX3-32S-C32', 'Arista-7050CX3-32S-D48C8'] and release in ['202305', 'master'])"
         - https://github.com/sonic-net/sonic-mgmt/issues/8400
-        - "hwsku in ['Arista-7050CX3-32S-C32', 'Arista-7050CX3-32S-D48C8'] and release in ['202305', 'master']"
 
 #######################################
 #####         platform_tests      #####
