--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -692,6 +692,21 @@ ntp/test_ntp.py::test_ntp_long_jump_disabled:
     reason: "Known NTP bug"
 
 #######################################
+#####     override_config_table   #####
+#######################################
+override_config_table/test_override_config_masic.py:
+  skip:
+    reason: "Skip override-config-table multi-asic testing on single-asic platforms, golden config format in test is not compatible with single-asics"
+    conditions:
+      - is_multi_asic == False
+
+override_config_table/test_override_config_table.py:
+  skip:
+    reason: "Skip override-config-table testing on multi-asic platforms, golden config format in test is not compatible with multi-asics"
+    conditions:
+      - is_multi_asic == True
+
+#######################################
 #####           pc               #####
 #######################################
 pc/test_lag_2.py::test_lag_db_status_with_po_update:
