--- a/ansible/roles/vm_set/tasks/remove_topo.yml
+++ b/ansible/roles/vm_set/tasks/remove_topo.yml
@@ -20,18 +20,18 @@
       mux_simulator_action: stop
     when: "'dualtor' in topo"
 
-  - name: Stop exabgp processes
-    include_tasks: announce_routes.yml
-    vars:
-      exabgp_action: stop
-    when:
-      - topo != 'fullmesh'
-      - not 'ptf' in topo
-
   - name: Stop PTF portchannel service
     include_tasks: ptf_portchannel.yml
     vars:
       ptf_portchannel_action: stop
+
+  - name: Kill exabgp and ptf_nn_agent processes in PTF container
+    ptf_control:
+      ctn_name: "ptf_{{ vm_set_name }}"
+      command: kill
+    when:
+      - topo != 'fullmesh'
+      - not 'ptf' in topo
 
   - name: Get duts ports
     include_tasks: get_dut_port.yml
