--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -150,6 +150,7 @@ stages:
           VM_TYPE: vsonic
           KVM_IMAGE_BRANCH: "202305"
           MGMT_BRANCH: "202305"
+          SCRIPTS_EXCLUDE: "bgp/test_bgp_fact.py"
 
 #  - job: wan_elastictest
 #    displayName: "kvmtest-wan by Elastictest"
