--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -1044,13 +1044,7 @@ snmp/test_snmp_link_local.py:
   skip:
     reason: "SNMP over IPv6 support not present in 202211 release."
     conditions:
-      - "release in ['202211']"
-
-snmp/test_snmp_loopback.py:
-  skip:
-    reason: "SNMP over Loopback IPv6 support not present in 202211 release."
-    conditions:
-      - "release in ['202211']"
+      - "(is_multi_asic==False) and (release in ['202205', '202211', '202305'])"
 
 snmp/test_snmp_pfc_counters.py:
   skip:
