--- a/tests/qos/files/qos_params.pac.yaml
+++ b/tests/qos/files/qos_params.pac.yaml
@@ -50,6 +50,16 @@ qos_params:
                 limit: 80
                 lossy_weight: 8
                 lossless_weight: 30
+            shared_res_size_1:
+                ecn: 1
+                packet_size: 1350
+                cell_size: 384
+                pkts_num_margin: 1
+            shared_res_size_2:
+                ecn: 1
+                packet_size: 1350
+                cell_size: 384
+                pkts_num_margin: 1
             100000_300m:
                 pkts_num_leak_out: 0
                 pg_drop:
@@ -180,6 +190,16 @@ qos_params:
                 limit: 80
                 lossy_weight: 8
                 lossless_weight: 30
+            shared_res_size_1:
+                ecn: 1
+                packet_size: 1350
+                cell_size: 384
+                pkts_num_margin: 1
+            shared_res_size_2:
+                ecn: 1
+                packet_size: 1350
+                cell_size: 384
+                pkts_num_margin: 1
             100000_300m:
                 pkts_num_leak_out: 0
                 pkts_num_egr_mem: 5915
