--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -1042,9 +1042,11 @@ show_techsupport/test_techsupport.py::test_techsupport:
 #######################################
 snmp/test_snmp_link_local.py:
   skip:
-    reason: "SNMP over IPv6 support not present in 202211 release."
+    reason: "SNMP over IPv6 support not present in release branches."
     conditions:
-      - "(is_multi_asic==False) and (release in ['202205', '202211', '202305'])"
+      - https://github.com/sonic-net/sonic-buildimage/issues/6108
+      - "is_multi_asic==False"
+      - "release in ['202205', '202211', '202305'])"
 
 snmp/test_snmp_pfc_counters.py:
   skip:
