--- a/tests/qos/files/qos_params.pac.yaml
+++ b/tests/qos/files/qos_params.pac.yaml
@@ -14,20 +14,20 @@ qos_params:
                 dscp: 8
                 ecn: 1
                 pg: 0
-                pkts_num_trig_egr_drp: 16000
+                pkts_num_trig_egr_drp: 5121
                 pkts_num_fill_min: 0
                 pkts_num_margin: 4
-                packet_size: 1350
-                cell_size: 384
+                packet_size: 8156
+                cell_size: 8192
             wm_buf_pool_lossy:
                 dscp: 8
                 ecn: 1
                 pg: 0
                 queue: 0
-                pkts_num_trig_egr_drp: 4000
-                pkts_num_fill_egr_min: 0
-                cell_size: 384
-                packet_size: 1350
+                pkts_num_trig_egr_drp: 10241
+                pkts_num_fill_egr_min: 3
+                cell_size: 8192
+                packet_size: 8140
             wrr:
                 ecn: 1
                 q0_num_of_pkts: 70
@@ -60,6 +60,14 @@ qos_params:
                 packet_size: 1350
                 cell_size: 384
                 pkts_num_margin: 1
+            lossy_queue_voq_3:
+                dscp: 8
+                ecn: 1
+                pg: 0
+                pkts_num_trig_egr_drp: 10241
+                pkts_num_margin: 4
+                packet_size: 8140
+                cell_size: 8192
             100000_300m:
                 pkts_num_leak_out: 0
                 pg_drop:
@@ -131,6 +139,14 @@ qos_params:
                     pkts_num_trig_pfc: 2400
                     pkts_num_margin: 4
                     packet_size: 1350
+                lossy_queue_1:
+                    dscp: 8
+                    ecn: 1
+                    pg: 0
+                    pkts_num_trig_egr_drp: 10241
+                    pkts_num_margin: 4
+                    packet_size: 8140
+                    cell_size: 8192
                 wm_buf_pool_lossless:
                     dscp: 3
                     ecn: 1
@@ -154,20 +170,20 @@ qos_params:
                 dscp: 8
                 ecn: 1
                 pg: 0
-                pkts_num_trig_egr_drp: 16000
+                pkts_num_trig_egr_drp: 5121
                 pkts_num_fill_min: 0
                 pkts_num_margin: 4
-                packet_size: 1350
-                cell_size: 384
+                packet_size: 8156
+                cell_size: 8192
             wm_buf_pool_lossy:
                 dscp: 8
                 ecn: 1
                 pg: 0
                 queue: 0
-                pkts_num_trig_egr_drp: 4000
-                pkts_num_fill_egr_min: 0
-                cell_size: 384
-                packet_size: 1350
+                pkts_num_trig_egr_drp: 10241
+                pkts_num_fill_egr_min: 3
+                cell_size: 8192
+                packet_size: 8140
             wrr:
                 ecn: 1
                 q0_num_of_pkts: 70
@@ -273,6 +289,14 @@ qos_params:
                     pkts_num_trig_pfc: 2400
                     pkts_num_margin: 4
                     packet_size: 1350
+                lossy_queue_1:
+                    dscp: 8
+                    ecn: 1
+                    pg: 0
+                    pkts_num_trig_egr_drp: 10241
+                    pkts_num_margin: 4
+                    packet_size: 8140
+                    cell_size: 8192
                 wm_buf_pool_lossless:
                     dscp: 3
                     ecn: 1
