--- a/tests/qos/files/qos_params.gb.yaml
+++ b/tests/qos/files/qos_params.gb.yaml
@@ -656,7 +656,7 @@ qos_params:
                     packet_size: 1350
             100000_120000m:
                 pkts_num_leak_out: 0
-                pkts_num_egr_mem: 1276
+                pkts_num_egr_mem: 1256
                 pg_drop:
                     dscp: 3
                     ecn: 1
@@ -664,15 +664,16 @@ qos_params:
                     queue: 3
                     pkts_num_trig_pfc: 262144
                     pkts_num_trig_ingr_drp: 524288
-                    pkts_num_margin: 13267
+                    pkts_num_margin: 30000
                     iterations: 30
+                    cell_size: 8192
                 xoff_1:
                     dscp: 3
                     ecn: 1
                     pg: 3
                     pkts_num_trig_pfc: 3202
                     pkts_num_trig_ingr_drp: 6404
-                    packet_size: 8140
+                    packet_size: 8156
                     pkts_num_margin: 20
                 xoff_2:
                     dscp: 4
@@ -680,7 +681,7 @@ qos_params:
                     pg: 4
                     pkts_num_trig_pfc: 3202
                     pkts_num_trig_ingr_drp: 6404
-                    packet_size: 8140
+                    packet_size: 8156
                     pkts_num_margin: 20
                 xon_1:
                     dscp: 3
@@ -766,6 +767,7 @@ qos_params:
                     pkts_num_trig_ingr_drp: 1887437
                     pkts_num_margin: 108000
                     iterations: 30
+                    cell_size: 8192
                 xoff_1:
                     dscp: 3
                     ecn: 1
