--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -993,6 +993,12 @@ qos/test_qos_sai.py::TestQosSai::testQosSaiSharedReservationSize:
     conditions:
       - "asic_type not in ['cisco-8000']"
 
+qos/test_qos_dscp_mapping.py::TestQoSSaiDSCPQueueMapping_IPIP_Base::test_dscp_to_queue_mapping_pipe_mode:
+  xfail:
+    reason: "Pipe decap mode not supported due to either SAI or platform limitation"
+    conditions:
+      - "asic_type in ['mellanox', 'cisco-8000']"
+
 #######################################
 #####         restapi             #####
 #######################################
