adding new testcase in test_nhop_group.py

--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -652,6 +652,13 @@ ipfwd/test_mtu.py:
     conditions:
       - "topo_type not in ['t1', 't2']"
 
+ipfwd/test_nhop_group.py::test_nhop_group_member_packet_drops:
+  skip:
+    reason: "testcase not supported"
+    conditions:
+      - "asic_type not in ['cisco-8000']"
+      - 't1' not in topo_name
+
 #######################################
 #####           macsec            #####
 #######################################
