--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -800,6 +800,15 @@ pfcwd/test_pfcwd_warm_reboot.py:
         - https://github.com/sonic-net/sonic-mgmt/issues/8400
 
 #######################################
+#####         pktgen              #####
+#######################################
+test_pktgen.py
+   skip:
+     reason: "Only supported in cisco-8000"
+     conditions:
+        - "asic_type not in ['cisco-8000']"
+
+#######################################
 #####         platform_tests      #####
 #######################################
 platform_tests/api/test_sfp.py::TestSfpApi::test_reset:
